[gd_scene load_steps=7 format=3 uid="uid://eqophvgbb1bt"]

[ext_resource type="Texture2D" uid="uid://d3byhytbc7d1x" path="res://Asset/Clippy.webp" id="1_4ops2"]
[ext_resource type="Script" path="res://Menu/mainMenu.gd" id="1_hat3v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_thh3r"]
bg_color = Color(0.737255, 0.733333, 0.490196, 1)
skew = Vector2(0.05, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_left = 6

[sub_resource type="Animation" id="Animation_lygx4"]
resource_name = "FadeOut"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(40, 904), Vector2(808, 904)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-40, 0), Vector2(-40, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect2:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(40, 904), Vector2(872, 904)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColorRect2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1600, 0), Vector2(768, 0)]
}

[sub_resource type="Animation" id="Animation_mia5f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(40, 904)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-40, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect2:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(40, 904)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColorRect2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1600, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_14ddw"]
_data = {
"FadeOut": SubResource("Animation_lygx4"),
"RESET": SubResource("Animation_mia5f")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hat3v")

[node name="PlayButton" type="Button" parent="."]
layout_mode = 0
offset_left = 664.0
offset_top = 648.0
offset_right = 904.0
offset_bottom = 776.0
text = "Play"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 192.0
offset_top = -74.0
offset_right = 1406.0
offset_bottom = 272.0
theme_override_font_sizes/normal_font_size = 100
bbcode_enabled = true
text = "[center][wave amp=50.0 freq=5.0 connected=1][rainbow freq=.50 sat=0.8 val=0.8]
Welcome to the Jam
[/rainbow][/wave][/center]"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1328.0
offset_top = 568.0
offset_right = 1536.0
offset_bottom = 832.0
texture = ExtResource("1_4ops2")
expand_mode = 1
stretch_mode = 4

[node name="Panel" type="Panel" parent="TextureRect"]
layout_mode = 0
offset_left = -216.0
offset_top = -16.0
offset_right = 24.0
offset_bottom = 64.0
theme_override_styles/panel = SubResource("StyleBoxFlat_thh3r")

[node name="Label" type="Label" parent="TextureRect/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
text = "Click on me for a tutorial!!!"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_14ddw")
}

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -40.0
offset_bottom = 904.0
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 1600.0
offset_right = 1640.0
offset_bottom = 904.0
color = Color(0, 0, 0, 1)

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel2" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
